# oneroot

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/akurupela/oneroot/: OnerootPlugin.java
android/src/main/java/com/akurupela/oneroot/core/: Const.java  OneRoot.java  Phaser.java
android/src/main/jni/: CMakeLists.txt  oneroot_binary.cpp  oneroot_binary.h
android/src/test/java/com/akurupela/oneroot/: OnerootPluginTest.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/akurupela/oneroot_example/: MainActivity.java
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: oneroot.podspec
ios/Classes/: OneRoot.swift  OnerootPlugin.h  OnerootPlugin.m  OnerootPlugin.swift  SwiftOnerootPlugin.swift
lib/: oneroot.dart  oneroot_method_channel.dart  oneroot_platform_interface.dart
test/: oneroot_method_channel_test.dart  oneroot_test.dart
